# opencv-camera

./: CMakeLists.txt  main.cpp
